Fix tests. #744